--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -31,3 +31,53 @@ nav {
     }
   }
 }
+
+
+// CREATE FORM STLE
+
+.createNote {
+  width: 50%;
+  height: 23em;
+  background-color: antiquewhite;
+  margin: 0 auto;
+  border-radius: 20px;
+
+  //Nesting Create Note Header Style
+  h2 {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    font-size: 2em;
+  }
+
+//Nesting Fieldset Styling
+  form > fieldset {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    width: 50%;
+    margin: 0 auto;
+    border-radius: 10px;
+  }
+
+  //Nesting legend styling
+  legend {
+    font-size: 1.25em;
+    color: black;
+  }
+
+  //Nesting input styling
+  input {
+    padding: 10px;
+    border-radius: 10px;
+    border: 3px solid black;
+  }
+}
+
+// Background Color Applied 
+body {  
+  background-color: #1fd1f9;
+  background-image: linear-gradient(315deg, #1fd1f9 0%, #b621fe 74%);
+}
+
