--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -75,9 +75,13 @@ nav {
   }
 }
 
-// Background Color Applied 
-body {  
-  background-color: #1fd1f9;
-  background-image: linear-gradient(315deg, #1fd1f9 0%, #b621fe 74%);
+// Particles background
+.particles-container {
+  position: absolute; 
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; 
 }
 
