--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -98,3 +98,53 @@ nav {
   z-index: -1; 
 }
 
+// List of cards
+.notes {
+  width: 40%;
+  height: 50em;
+  background-color: rgb(0, 0, 0);
+  margin: 0 auto;
+  border-radius: 20px;
+  box-shadow: 0px 10px 20px rgba(255, 255, 255, 0.4);
+
+  h2 {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: whitesmoke;
+    font-size: 2em;
+    margin-top: 5rem;
+  }
+
+  input {
+    margin-top: 0.5rem;
+    padding: 5px;
+    border-radius: 10px;
+    border: 3px solid black;
+    width: 70%;
+    height: 1.5rem;
+  }
+
+  input[value="Done"] {
+    width: 30%;
+    background-color: rgb(18, 79, 222);
+    color: white;
+    height: 3rem;
+  }
+
+  input[value="Delete"] {
+    width: 30%;
+    background-color: rgb(224, 22, 22);
+    color: white;
+    height: 3rem;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin: 0 auto;
+    border-radius: 10px;
+  }
+}
+
