--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -3,28 +3,22 @@
 // --------------------------
 $maincolor:#5f85fb;
 $contrastcolor: white;
-
 @mixin white-text-black-bg {
   color: $contrastcolor;
   background-color: $maincolor;
 }
-
 @mixin black-test-white-bg {
   color: $maincolor;
   background-color: $contrastcolor;
 }
-
 // --------------------------
 // Header
 // --------------------------
-
 nav {
   @include white-text-black-bg;
   display: flex;
   justify-content: space-around;
   border-radius: 10px;
-  
-
   a {
     @include white-text-black-bg;
     div {
@@ -32,11 +26,8 @@ nav {
       font-size: large;
     }
     text-decoration: none;
-
   }
 }
-
-
 // CREATE FORM STLE
 .createNote {
   width: 30%;
@@ -45,9 +36,6 @@ nav {
   margin: 0 auto;
   border-radius: 20px;
   box-shadow: 0px 10px 20px rgba(255, 255, 255, 0.4);
-
-
-
   //Nesting Create Note Header Style
   h2 {
     text-align: center;
@@ -56,7 +44,6 @@ nav {
     font-size: 2em;
     margin-top: 5rem;
   }
-
 //Nesting Fieldset Styling
   form > fieldset {
     display: flex;
@@ -67,13 +54,11 @@ nav {
     margin: 0 auto;
     border-radius: 10px;
   }
-
   //Nesting legend styling
   legend {
     font-size: 1.25em;
     color: whitesmoke;
   }
-
   //Nesting input styling
   input {
     margin-top: 0.5rem;
@@ -83,7 +68,6 @@ nav {
     width: 70%;
     height: 1.5rem;
   }
-
   input[type="submit"] {
     width: 30%;
     background-color: rgb(18, 79, 222);
@@ -91,14 +75,86 @@ nav {
     height: 3rem;
   }
 }
-
 // Particles background
 .particles-container {
-  position: absolute; 
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1; 
+  z-index: -1;
 }
-
+// List of cards
+.notes {
+  width: 40%;
+  height: 50em;
+  background-color: rgb(0, 0, 0);
+  margin: 0 auto;
+  border-radius: 20px;
+  box-shadow: 0px 10px 20px rgba(255, 255, 255, 0.4);
+  h2 {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: whitesmoke;
+    font-size: 2em;
+    margin-top: 5rem;
+  }
+  input {
+    margin-top: 0.5rem;
+    padding: 10px;
+    border-radius: 10px;
+    border: 3px solid black;
+    width: 70%;
+    height: 1.5rem;
+  }
+  input[value="Done"] {
+    width: 30%;
+    background-color: rgb(18, 79, 222);
+    color: white;
+    height: 3rem;
+  }
+  input[value="Delete"] {
+    width: 30%;
+    background-color: rgb(224, 22, 22);
+    color: white;
+    height: 3rem;
+  }
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin: 0 auto;
+    border-radius: 10px;
+  }
+}
+div.MuiDialogContent-root.css-cu8ovf-MuiDialogContent-root{
+  text-align: center;
+  color: $contrastcolor;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(0, 0, 0);
+  margin: 0 auto;
+  border-radius: 3px;
+}
+a{
+  color: white;
+  border: 1px solid #124FDE;
+  background-color: #124FDE;
+  padding: 10px;
+  text-decoration: none;
+  border-radius: 6px;
+  font-family: Arial, Helvetica, sans-serif;
+  justify-content: center;
+}
+a:hover{
+  background: white;
+  color: #5F85FB;
+}
+div.Note{
+  justify-content: center;
+}
+div.deleteButton{
+  justify-content: center;
+  padding: 10px;
+  display: flex;
+}
