--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -138,7 +138,8 @@ div.MuiDialogContent-root.css-cu8ovf-MuiDialogContent-root{
 }
 a{
   color: white;
-  background-color: #de1212;
+  border: 1px solid #124FDE;
+  background-color: #124FDE;
   padding: 10px;
   text-decoration: none;
   border-radius: 6px;
