--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -138,8 +138,7 @@ div.MuiDialogContent-root.css-cu8ovf-MuiDialogContent-root{
 }
 a{
   color: white;
-  border: 1px solid #124FDE;
-  background-color: #124FDE;
+  background-color: #ef0606;
   padding: 10px;
   text-decoration: none;
   border-radius: 6px;
